--- a/euphoniae/src/scss/App.scss
+++ b/euphoniae/src/scss/App.scss
@@ -1,57 +1,15 @@
-@function legacy-direction($value) {
-	@if is-direction($value) == false {
-		@error "Cannor convert `#{$value}`to legacy syntax because it doesn't seem to be a direction.";
-	}
-
-	$conversion-map: (
-		to top 			: bottom,
-		to top right	: bottom left,
-		to right top 	: left bottom, 
-		to right 		: left,
-		to bottom right : top left,
-		to right bottom : left top,
-		to bottom 		: top,
-		to bottom left 	: top right,
-		to left bottom	: right top,
-		to left 		: right,
-		to left top 	: right bottom,
-		to top left 	: bottom right
-	);
-
-	@if map-has-key($conversion-map, $value) {
-		@return map-get($conversion-map, $value);
-	}
-
-	@return 90deg - $value;
-}
-
-@function is-direction($value) {
-	$is-keyword: index((to top, to top right, to right top, to right, to bottom right, to right bottom, to bottom, to bottom left, to left bottom, to left, to left top, to top left), $value);
-
-	$is-angle: type-of($value) == 'number' and index('deg' 'grad' 'turn' 'rad', unit($value));
-
-	@return $is-keyword or $is-angle;
-}
-
-@mixin linear-gradient($direction, $color-stops...) {
-	
-	@if is-direction($direction) == false {
-		$color-stops: $direction, $color-stops;
-		$direction: 180dg;
-	}
-
-	background: nth(nth($color-stops, 1), 1);
-	background: -webkit-linear-gradient(legacy-direction($direction), $color-stops);
-	background: linear-gradient($direction, $color-stops);
-}
-
 $primaryColor: #3c91e5;
 $secondaryColor: #e5e5e5;
 $terciaryColor: #1e89e2;
 
 .App {
 
-	@include linear-gradient(to bottom, #3C91E5 0%, #58A0E2 56%, #7BB1E0 100%);
+	height: 100%;
+	background: url('../img/background.jpg') no-repeat center center fixed;
+	-webkit-background-size:cover;
+	-moz-background-size:cover;
+	-o-background-size:cover;
+	background-size:cover;
 
 	.logo {
 		height: 30px;
