--- a/euphoniae/src/scss/NotFound.scss
+++ b/euphoniae/src/scss/NotFound.scss
@@ -9,7 +9,7 @@ $largeSize: 100px;
 	display: flex;
 	flex-wrap: wrap;
 	margin: 0 auto;
-	padding: 20px 50px;
+	padding: 20px 50px 120px 50px;
 	text-align: left;
 
 	
