--- a/euphoniae/src/scss/Login.scss
+++ b/euphoniae/src/scss/Login.scss
@@ -7,8 +7,15 @@
 		margin: 0 auto;
 		max-width: 320px;
 
+		#Element {
+			display: none;
+			font-size: 20px;
+			font-weight: bold;
+			color: white;
+		}
+
 		p {
-			padding-top: 20px;
+			padding-top: 5px;
 			text-align: center;
 			color: #c2d1f0;
 		}
