--- a/euphoniae/src/scss/Signup.scss
+++ b/euphoniae/src/scss/Signup.scss
@@ -1,3 +1,14 @@
+// Fonts
+$font-stack: Work Sans, sans-serif;
+
+// Size
+$large: 40px;
+$medium: 20px;
+
+// Color
+$primary: white;
+$secondary: #ebebe0;
+
 .Signup {
 	padding: 60px 0;
 
@@ -15,22 +26,23 @@
 
 		#Element {
 			display: none;
-			font-size: 20px;
+			font: $medium $font-stack;
 			font-weight: bold;
-			color: white;
+			color: $primary;
 		}
 	}
 
 	h1 {
 		padding-bottom: 10px;
-		font-size: 40px;
-		color: white;
+		font: $large $font-stack;
+		color: $primary;
 	}
 
 	p {
+		font: $font-stack;
 		padding-top: 5px;
 		text-align: center;
-		color: #c2d1f0;
+		color: $secondary;
 	}
 
 	.labels {
