--- a/euphoniae/src/scss/App.scss
+++ b/euphoniae/src/scss/App.scss
@@ -1,6 +1,6 @@
-$primaryColor: #3c91e5;
-$secondaryColor: #e5e5e5;
-$terciaryColor: #1e89e2;
+// Color
+$primary: #e5e5e5;
+$secondary: rgba(0, 0, 19, 0.4);
 
 
 body{
@@ -14,6 +14,7 @@ body{
 
 	.App {
 
+		
 		.logo {
 			height: 30px;
 			padding-bottom: 10px;
@@ -31,18 +32,18 @@ body{
 		}
 
 		.navbar {
-			background: $primaryColor;
+			background: none;
 			border: none;
 			margin: 0;
 		}
 
 		.navbar-collapse {
-			background: $primaryColor;
-			border: $primaryColor;
+			background: none;
+			border: none;
 
 			.in {
-				background: $terciaryColor;
-				border: $terciaryColor;
+				background: $secondary;
+				border: $secondary;
 			}
 		}
 
@@ -62,7 +63,7 @@ body{
 					a {
 						color: white;
 						font-weight: bold;
-						background: $terciaryColor;
+						background: none;
 					}
 				}
 
@@ -70,18 +71,18 @@ body{
 
 					&:hover {
 						color: white;
-						background: $terciaryColor;
+						background: $secondary;
 					}
 				}
 
 			}
 
 			.navbar-brand {
-				color: $secondaryColor;
+				color: $primary;
 				font-weight: 500;
 			
 				&:focus {
-					color: $secondaryColor;
+					color: $primary;
 				}
 
 				&:hover {
@@ -91,18 +92,18 @@ body{
 			}	
 			
 			.navbar-toggle {
-				background: $primaryColor;
+				background: none;
 
 				.icon-bar {
-					background: $secondaryColor;
+					background: $primary;
 				}
 
 				&:focus {
-					background: $primaryColor;
+					background: none;
 				}
 
 				&:hover {
-					background: $terciaryColor;
+					background: $secondary;
 				}
 
 			}
