--- a/euphoniae/src/scss/Home.scss
+++ b/euphoniae/src/scss/Home.scss
@@ -6,15 +6,12 @@
           transform: translate($x, $y);
 }
 
-
 .Songs {
 	
 	width: 100%;
 	padding: 30px 0; 
 	display: flex;
 	flex-wrap: wrap;
-
-	
 
 	.list-group-item {
 		position: relative;
@@ -48,33 +45,29 @@
 			transition: .5s ease;
 			opacity: 0;
 			position: absolute;
-			top: 50%;
+			top: 65%;
 			left: 50%;
 			@include translate(-50%, -50%)
 			text-align: center;
 
-			.text {
-				color: white;
-
-				h3 {
-					font-size: 20px;
-				}
-
-				.home-buttons {
-					padding-top: 5px;
-					
-					a, button {
-						backgound: transparent;
-					}
-
-				}
+			.home-buttons {
+				padding-top: 5px;
 			}
 
 		}
 
+		.song-info {
+			text-align: center;
+			color: white;
+
+				h3 {
+					font-size: 20px;
+				}
+		}
+
 		&:hover {
 
-			.thumbnail{
+			.thumbnail {
 				opacity: 0.3;
 			}
 
